fixing navbar on mobile

--- a/styles/body_style.css
+++ b/styles/body_style.css
@@ -12,6 +12,15 @@ body {
 
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 .container {
     background-color: rgba(255, 255, 255, 0.7);
 }
